syntax = "proto3";

package chatee.conn;

option go_package = "chatee-go/proto/conn";

import "common/common.proto";

// =============================================================================
// WebSocket Connection Protocol
// =============================================================================
// This protocol defines the message format for WebSocket communication
// between client and server. Both client and server should use these
// message definitions for type safety and consistency.

// =============================================================================
// Message Types
// =============================================================================

// MessageType defines the type of WebSocket message
enum MessageType {
    MESSAGE_TYPE_UNSPECIFIED = 0;
    
    // Client -> Server
    MSG_PING = 1;
    MSG_SUBSCRIBE = 2;
    MSG_UNSUBSCRIBE = 3;
    MSG_SEND_MESSAGE = 4;
    MSG_TYPING = 5;
    MSG_ACK = 6;              // Acknowledge receipt of a message
    
    // Server -> Client
    MSG_CONNECTED = 100;
    MSG_PONG = 101;
    MSG_SUBSCRIBED = 102;
    MSG_UNSUBSCRIBED = 103;
    MSG_MESSAGE_RECEIVED = 104;
    MSG_USER_TYPING = 105;
    MSG_ERROR = 106;
    
    // Push Notifications (Server -> Client)
    MSG_PUSH_THREAD_ROOT = 200;
    MSG_PUSH_THREAD_REPLY = 201;
    MSG_PUSH_CHAT_MESSAGE = 202;
    MSG_PUSH_MENTION = 203;
    MSG_PUSH_FEED_UPDATE = 204;
}

// =============================================================================
// Base WebSocket Message
// =============================================================================

// WebSocketMessage is the base message envelope for all WebSocket communication
message WebSocketMessage {
    string id = 1;                    // Unique message ID for request/response matching
    MessageType type = 2;             // Message type
    int64 timestamp = 3;               // Unix timestamp in milliseconds
    oneof payload {
        // Client -> Server payloads
        PingPayload ping = 10;
        SubscribePayload subscribe = 11;
        UnsubscribePayload unsubscribe = 12;
        SendMessagePayload send_message = 13;
        TypingPayload typing = 14;
        AckPayload ack = 15;
        
        // Server -> Client payloads
        ConnectedPayload connected = 100;
        PongPayload pong = 101;
        SubscribedPayload subscribed = 102;
        UnsubscribedPayload unsubscribed = 103;
        MessageReceivedPayload message_received = 104;
        UserTypingPayload user_typing = 105;
        ErrorPayload error = 106;
        
        // Push notification payloads
        PushThreadRootPayload push_thread_root = 200;
        PushThreadReplyPayload push_thread_reply = 201;
        PushChatMessagePayload push_chat_message = 202;
        PushMentionPayload push_mention = 203;
        PushFeedUpdatePayload push_feed_update = 204;
    }
}

// =============================================================================
// Client -> Server Payloads
// =============================================================================

// PingPayload for heartbeat
message PingPayload {
    // Empty - ping is just the message type
}

// SubscribePayload to subscribe to a channel/session
message SubscribePayload {
    string session_id = 1;            // Session ID to subscribe to
    string channel = 2;               // Optional channel name (for group chats)
    string thread_id = 3;             // Optional thread ID (for thread subscriptions)
}

// UnsubscribePayload to unsubscribe from a channel/session
message UnsubscribePayload {
    string session_id = 1;
    string channel = 2;
    string thread_id = 3;
}

// SendMessagePayload to send a message
message SendMessagePayload {
    string session_id = 1;
    string chat_key = 2;              // For chat messages
    string thread_id = 3;             // For thread messages
    string content = 4;
    chatee.common.ContentType content_type = 5;
    repeated string mentions = 6;
    map<string, string> metadata = 7;
}

// TypingPayload to indicate user is typing
message TypingPayload {
    string session_id = 1;
    string chat_key = 2;
    string thread_id = 3;
    bool is_typing = 4;
}

// AckPayload to acknowledge receipt of a message
message AckPayload {
    string message_id = 1;            // ID of the message being acknowledged
}

// =============================================================================
// Server -> Client Payloads
// =============================================================================

// ConnectedPayload sent when WebSocket connection is established
message ConnectedPayload {
    string connection_id = 1;
    string user_id = 2;
    string session_id = 3;
    int64 server_time = 4;            // Server timestamp for clock sync
}

// PongPayload response to ping
message PongPayload {
    int64 server_time = 1;
}

// SubscribedPayload confirmation of subscription
message SubscribedPayload {
    string session_id = 1;
    string channel = 2;
    string thread_id = 3;
}

// UnsubscribedPayload confirmation of unsubscription
message UnsubscribedPayload {
    string session_id = 1;
    string channel = 2;
    string thread_id = 3;
}

// MessageReceivedPayload acknowledgment that message was received
message MessageReceivedPayload {
    string message_id = 1;
    int64 received_at = 2;
}

// UserTypingPayload notification that a user is typing
message UserTypingPayload {
    string user_id = 1;
    string session_id = 2;
    string chat_key = 3;
    string thread_id = 4;
    bool is_typing = 5;
}

// ErrorPayload for error messages
message ErrorPayload {
    string code = 1;                  // Error code (e.g., "invalid_payload", "unauthorized")
    string message = 2;               // Human-readable error message
    map<string, string> details = 3;  // Additional error details
}

// =============================================================================
// Push Notification Payloads (Server -> Client)
// =============================================================================

// PushThreadRootPayload for new thread root message
message PushThreadRootPayload {
    string thread_id = 1;
    string msg_id = 2;
    string author_id = 3;
    string title = 4;
    string content_preview = 5;       // First 100 characters
    int64 timestamp = 6;
    repeated string ai_agents = 7;    // AI agents in the thread
}

// PushThreadReplyPayload for thread reply
message PushThreadReplyPayload {
    string thread_id = 1;
    string reply_msg_id = 2;
    string author_id = 3;
    string parent_msg_id = 4;
    string content_preview = 5;
    int64 timestamp = 6;
    PushType push_type = 7;          // full, limited, mention
    bool require_follow = 8;          // Whether user needs to follow thread owner
    string thread_owner = 9;
}

// PushChatMessagePayload for chat message
message PushChatMessagePayload {
    string chat_key = 1;
    string msg_id = 2;
    string sender_id = 3;
    chatee.common.AuthorType sender_type = 4;
    string content = 5;
    chatee.common.ContentType content_type = 6;
    repeated string mentions = 7;
    int64 timestamp = 8;
    bool is_group = 9;
}

// PushMentionPayload for mention notification
message PushMentionPayload {
    string thread_id = 1;
    string chat_key = 2;
    string msg_id = 3;
    string mentioned_by = 4;
    string content_preview = 5;
    int64 timestamp = 6;
}

// PushFeedUpdatePayload for feed updates
message PushFeedUpdatePayload {
    FeedType feed_type = 1;           // follow_feed, reply_feed, chat_inbox
    int64 unread_count = 2;           // Total unread count
    int64 timestamp = 3;
}

enum PushType {
    PUSH_TYPE_UNSPECIFIED = 0;
    PUSH_TYPE_FULL = 1;               // Full content push
    PUSH_TYPE_LIMITED = 2;            // Limited/preview only
    PUSH_TYPE_MENTION = 3;            // Mention notification
}

enum FeedType {
    FEED_TYPE_UNSPECIFIED = 0;
    FEED_TYPE_FOLLOW = 1;             // Follow feed (user_follow_feeds)
    FEED_TYPE_REPLY = 2;              // Reply feed (user_rev_reply_feeds)
    FEED_TYPE_CHAT_INBOX = 3;         // Chat inbox (chat_user_inbox)
}

// =============================================================================
// Connection Metadata
// =============================================================================

// ConnectionInfo contains information about the WebSocket connection
message ConnectionInfo {
    string connection_id = 1;
    string user_id = 2;
    string session_id = 3;
    int64 connected_at = 4;
    int64 last_active = 5;
    map<string, string> metadata = 6;
}

// =============================================================================
// Batch Operations
// =============================================================================

// BatchMessage for sending multiple messages in one WebSocket frame
message BatchMessage {
    repeated WebSocketMessage messages = 1;
}
